@@ -1,3 +1,9 @@
+2008-02-05  Alexander Larsson  <alexl@redhat.com>
+
+        * daemon/gvfsbackendtrash.c:
+        (do_query_info):
+	Correctly set the name for toplevel items.
+
 2008-02-04  Tomas Bzatek  <tbzatek@redhat.com>
 
 	* daemon/gvfsjobmakesymlink.c:
